@startuml Logical_View 

class Cell {
    - _x: int
    - _y: int
    - _cell: str
    - _ship: Ship
    + get_cell(): str
    + set_cell(marker: str): None
    + place_ship(ship: Ship): None
    + hit(): bool
    + has_ship(): bool
}

class Ship {
    - size: int
    - hits: int
    - symbol: str
    + is_hit(): bool
    + is_sunk(): bool
    + get_symbol(): str
}

class Board {
    - _board: list[list[Cell]]
    - _ships: list[Ship]
    + place_ships(): None
    + ship_space_free(length: int, orient: int, loc_fit: int, loc: int): bool
}

class Player {
    - _name: str
    - _data_dict: dict[str, list[int]]
    + get_name(): str
    + update_player_stats(wins: int, losses: int): None
    + save_dict_to_file(file_path: str, data: dict[str, list[int]]): None
}

class AIPlayer {
    - strategy: AIStrategy
    + attack_player(board: Board): bool
}

interface AIStrategy {
    + choose_move(ai: AIPlayer): tuple[int, int]
}

class DumbStrategy
class TargetedStrategy

class Main {
    - _player: Player
    - _top_board: Board
    - _bottom_board: Board
    - _difficulty: str
    + read_input(): tuple[int, int]
    + loop(): None
    + main(): None
}


class BasicAttack {
    - x: int
    - y: int
    + execute(board: Board): str
}

AIStrategy <|.. DumbStrategy
AIStrategy <|.. TargetedStrategy
AIPlayer --> AIStrategy
Main --> Player
Main --> Board
Main --> AIPlayer
Board --> Cell
Board --> Ship
Cell --> Ship
BasicAttack --> Board
AIPlayer --> BasicAttack
@enduml
